# VolumeRender

./: ColorSlider.qml  OpacitySlider.qml  Opengl.cfg  README.md  VolumeRender.ydg  build.bat  main.qml
Shaders/: polymapper.vsh.c
inc/yLib/: JConfiger.h  yConfiger.h  yLib.h  yLogger.h  yModule.h  yMsg.h  yObject.h  ySingletone.h  yThread.h  yValue.h
inc/yLib/Json/: config.h  features.h  forwards.h  json.h  reader.h  value.h  writer.h
src/: CMakeLists.txt
src/OpenglObjects/: CMakeLists.txt  ColorPalette.cpp  ColorPalette.h  Coordinate.cpp  Coordinate.h  MapperItem.cpp  MapperItem.h  OSGItem.cpp  OSGItem.h  OpenglAxeMapper.cpp  OpenglAxeMapper.h  OpenglData.cpp  OpenglData.h  OpenglImageMapper.cpp  OpenglImageMapper.h  OpenglMapper.cpp  OpenglMapper.h  OpenglObjects.h  OpenglPolyMapper.cpp  OpenglPolyMapper.h  OpenglSliceMapper.cpp  OpenglSliceMapper.h  OpenglVolumeMapper.cpp  OpenglVolumeMapper.h  PiecewisePalette.cpp  PiecewisePalette.h  RawReader.cpp  RawReader.h  STLReader.cpp  STLReader.h  stdafx.cpp  stdafx.h
src/OpenglObjects/resources/: resources.qrc
src/OpenglObjects/resources/Shaders/: fragment.fsh  polymapper.fsh.c  polymapper.vsh.c  slicemapper.fsh.c  slicemapper.vsh.c  volumemapper.fsh.c  volumemapper.vsh.c
